# kaggle

./: .gitignore
digit-recognizer/: main.py
leash-BELKA/: main.py  pyproject.toml
