[tool.poetry]
name = "leash-belka"
version = "0.1.0"
description = ""
authors = ["Jin Hyoung Joo <hyoungjoo.j@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.3.0"
rdkit = "^2023.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
